# CppTemplate

./: .clang-format  .clang-format-ignore  .clang-tidy  .cz.toml  .gitignore  Dockerfile  Justfile  Makefile  README.md  gcovr.cfg  meson.build
.devcontainer/: devcontainer.json
.gitea/: template
.gitea/workflows/: build_and_test.yml  build_docs.yml  build_image.yml
ci/: build-and-test.yml
docs/: Dockerfile  Doxyfile.in  doxygen-awesome.css  mainpage.md  meson.build
src/: hello.cpp  meson.build
test/: Sample_test.cpp  meson.build
